# sandia-hand

./: .hgignore  CMakeLists.txt  README.md
cmake/: sandia-hand-config.cmake.in
doc/: SandiaHand(2f)FAQ(2f)Documentation.html  SandiaHand(2f)FAQ(2f)FingerTactile.html  SandiaHand(2f)FAQ(2f)FocusingLenses.html  SandiaHand(2f)FAQ(2f)ForceControl.html  SandiaHand(2f)FAQ(2f)SensingMethodComparison.html  SandiaHand(2f)FAQ(2f)TactileCalibration.html  SandiaHand(2f)HardwareBringup(2f)Homing.html  SandiaHand(2f)Overview(2f)Mechanical.html  SandiaHand(2f)Tutorials(2f)BothHandsBringup.html  SandiaHand(2f)Tutorials(2f)SignLanguageDemo.html  index.html
doc/attachments/SandiaHand(2f)Overview(2f)Electrical/: finger_pogo.PcbDoc
docs/: SandiaHand(2f)FAQ(2f)IgnoringFingers.html  SandiaHand(2f)FAQ(2f)PalmTroubleshooting.html  SandiaHand(2f)HardwareBringup(2f)CableTensioning.html  SandiaHand(2f)HardwareBringup(2f)FingerAttachment.html  SandiaHand(2f)HardwareBringup(2f)Fuse.html  SandiaHand(2f)Overview(2f)Electrical.html  SandiaHand(2f)Overview(2f)Firmware.html  SandiaHand(2f)Overview(2f)Software.html  SandiaHand(2f)Overview.html  SandiaHand(2f)Tutorials(2f)BothHandsGestures.html  SandiaHand(2f)Tutorials(2f)GetSoftware.html  SandiaHand(2f)Tutorials(2f)Prerequisites.html  SandiaHand(2f)Tutorials(2f)SingleHandDriverBringup.html  SandiaHand(2f)Tutorials(2f)SingleHandGestures.html  SandiaHand(2f)Tutorials(2f)SliderWidgetControl.html  SandiaHand(2f)Tutorials(2f)ViewStreams.html  SandiaHand.html
firmware/: CMakeLists.txt  INSTRUCTIONS
firmware/bl_mobo/: main.c
firmware/bl_sam3s/: CMakeLists.txt  bl_f2.c  bl_f3.c  bl_fmcb.c  bl_init.c  bl_lpalm.c  bl_rpalm.c  bl_sam3s.c  bl_sam3s.ld  bl_stubs.h
firmware/common_sam3s/: CMakeLists.txt
firmware/common_sam3x/: CMakeLists.txt  bootloader.c  bootloader_startup.S  clock.c  clock.h  console.c  enet.c  enet.h  fpga.c  sam3x.h  sam3x8e.ld  sam3x8e_bl.ld
firmware/f2/: CMakeLists.txt
firmware/f2/std/: comms.c  imu.c
firmware/f3/std/: comms.c  imu.c
firmware/fmcb/: CMakeLists.txt
firmware/fmcb/minimal/: startup.c
firmware/fmcb/std/: CMakeLists.txt  control.c  control.h  i2c_sensors.c  main.c  params.c  params.h  pb.c  pins.c  startup.c  status.h
firmware/mobo/: CMakeLists.txt
firmware/mobo/bl_mcu/: CMakeLists.txt  main.c  mobo-mcu-bl-left.c  mobo-mcu-bl-right.c  udp_rx.c
firmware/mobo/fpga/: CMakeLists.txt
firmware/mobo/mcu/: CMakeLists.txt  cam.c  cam.h  config.c  config.h  control.c  control.h  current.c  current.h  enet.c  enet.h  finger.c  finger.h  flash.c  flash.h  fpga.c  fpga_spi.c  fpga_spi.h  main.c  mobo_mcu.c  power.c  power.h  startup.c  udp_rx.c
firmware/mobo_mcu/: CMakeLists.txt  jtagkey.cfg  mobo_mcu.c  mobo_openocd.cfg  startup.c
firmware/openocd/: olimex-arm-usb-tiny-h.cfg
firmware/palm/std/: comms.c  main.c  pins.c  pins.h  tactile.c
firmware/psu/: CMakeLists.txt  main.c
firmware/rpalm/: CMakeLists.txt
firmware/rpalm/minimal/: CMakeLists.txt
firmware/rpalm/std/: CMakeLists.txt  comms.c  main.c  pins.c  pins.h  startup.c  state.c  status.c  status.h  tactile.c  tactile.h
ros/: CMakeLists.txt
ros/sandia_hand_description/: CMakeLists.txt  manifest.xml  package.xml
ros/sandia_hand_description/config/: sandia_hand_gazebo_gains.yaml
ros/sandia_hand_description/gazebo/: CMakeLists.txt  manifest.xml
ros/sandia_hand_description/launch/: CMakeLists.txt
ros/sandia_hand_description/meshes/: CMakeLists.txt
ros/sandia_hand_description/robots/: CMakeLists.txt  gazebo_manifest_generator.sh  sandia_hand_both.urdf.xacro  sandia_hand_both_on_box.urdf.xacro  sandia_hand_description.urdf.xacro  sandia_hand_left.urdf.xacro  sandia_hand_left_on_box.urdf.xacro  sandia_hand_right.urdf.xacro  sandia_hand_right_on_box.urdf.xacro  sandia_hand_stumps_on_box.urdf.xacro
ros/sandia_hand_description/urdf/: CMakeLists.txt  sandia_hand.gazebo.xacro  sandia_hand.urdf.xacro  sandia_hand_simple_shapes.urdf.xacro  sandia_hand_simple_shapes_explicit_damping.urdf.xacro
ros/sandia_hand_driver/: CMakeLists.txt  manifest.xml  package.xml
ros/sandia_hand_driver/camera_calibration/stereo/: left.ini  right.ini
ros/sandia_hand_driver/cli/: CMakeLists.txt  hand_cli.cpp  loose_finger_cli.cpp  palm_cli.cpp  sandia_hand_cli.cpp
ros/sandia_hand_driver/common/: CMakeLists.txt  finger.cpp  hand.cpp  loose_finger.cpp  loose_right_palm.cpp  message_processor.cpp  motor_module.cpp  palm.cpp  param.cpp  sandia_hand.cpp  serial_message_processor.cpp
ros/sandia_hand_driver/gui/: CMakeLists.txt  dialog.cpp  dialog.h  maintenance.py
ros/sandia_hand_driver/gui/homing/: CMakeLists.txt  homing_dialog.cpp  homing_dialog.h  main.cpp
ros/sandia_hand_driver/include/: hand.h  hand_packets.h
ros/sandia_hand_driver/include/sandia_hand/: finger.h  hand.h  hand_packets.h  loose_right_palm.h  message_processor.h  motor_module.h  palm.h  palm_state.h  palm_status.h  param.h  serial_message_processor.h
ros/sandia_hand_driver/include/sandia_hand_driver/: hand.h
ros/sandia_hand_driver/launch/: both_hands.launch
ros/sandia_hand_driver/nodes/: CMakeLists.txt  finger_state_estimator.py  sandia_hand_loose_finger_node.cpp  sandia_hand_loose_palm_node.cpp  sandia_hand_node.cpp  sandia_hand_state_estimator.py
ros/sandia_hand_driver/scripts/: f2_init.sh  f3_init.sh  f3_update_all.sh  fmcb_update_all.sh  loose_palm_burn.sh  mobo_fpga_update.sh  mobo_update.sh  rpalm_update.sh  view_rh_lh_cams.sh
ros/sandia_hand_driver/test/: finger_0_cycle_test.py
ros/sandia_hand_msgs/: CMakeLists.txt  package.xml
ros/sandia_hand_msgs/msg/: CalFingerStatus.msg  RawFingerStatus.msg  RawTactile.msg
ros/sandia_hand_teleop/: CMakeLists.txt  manifest.xml
ros/sandia_hand_teleop/control_nodes/: CMakeLists.txt  joy_to_simple_grasp.py  simple_grasp.py  simple_grasp_client.py
ros/sandia_hand_teleop/input_nodes/: CMakeLists.txt
ros/sandia_hand_teleop/launch/: nanokontrol_simple_grasp.launch
ros/sandia_hand_teleop/simple_grasp/: asl_gui.py  simple_grasp.py  simple_grasp_asl.py  simple_grasp_keyboard_teleop.py  simple_grasp_nanokontrol2.py
(+4 files in other folders)
