<?xml version="1.0"?>
<package>
  <name>sandia_hand_description</name>
  <version>5.1.15</version>
  <description>The sandia_hand_description package</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley, Steven Peters and John Hsu</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://bitbucket.org/osrf/sandia-hand</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>
</package>
