cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
if (NOT SANDIA_HAND_VERSION)
  message("WOAH THERE PARTNER. no version supplied. don't install this.")
  set(SANDIA_HAND_VERSION bogus)
endif()
set(PKG_NAME sandia_hand_driver)
set(ENV{ROS_PACKAGE_PATH} ${PROJECT_SOURCE_DIR}:$ENV{ROS_PACKAGE_PATH})
set(INSTALL_SHARE_PATH ${CMAKE_INSTALL_PREFIX}/share/sandia-hand-${SANDIA_HAND_VERSION}/ros/${PKG_NAME})
rosbuild_init()
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#common commands for building c++ executables and libraries
#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
#target_link_libraries(${PROJECT_NAME} another_library)
#rosbuild_add_boost_directories()
#rosbuild_link_boost(${PROJECT_NAME} thread)
#rosbuild_add_executable(example examples/example.cpp)
#target_link_libraries(example ${PROJECT_NAME})
include_directories(include)
add_subdirectory(common)
add_subdirectory(cli)
add_subdirectory(nodes)
install(FILES manifest.xml DESTINATION ${INSTALL_SHARE_PATH})
install(FILES include/sandia_hand/hand.h DESTINATION include/sandia_hand)
